# firmware-update

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  Xargo.toml  binutils.sha384  deps.sh  install.sh  rust-toolchain  rust-toolchain.toml  uninstall.sh
.github/workflows/: ci.yml
alloc_uefi/: Cargo.toml
alloc_uefi/src/: lib.rs
res/: firmware.nsh
src/: alloc.rs  boot.rs  console.rs  display.rs  dmi.rs  ec.rs  exec.rs  externs.rs  flash.rs  fs.rs  io.rs  key.rs  lib.rs  loaded_image.rs  macros.rs  main.rs  null.rs  panic.rs  pointer.rs  proto.rs  rt.rs  shell.rs  string.rs  text.rs  vars.rs
src/app/: bios.rs  cmos.rs  component.rs  ec.rs  mapper.rs  mod.rs  pci.rs  sideband.rs
src/cmd/: bios.rs  boot.rs  config.rs  dmi.rs  ec.rs  flash.rs  mod.rs  mouse.rs  splash.rs  vars.rs
src/flash/: bios.rs  component.rs  ec.rs  me.rs  mod.rs
src/hw/: dmi.rs  ec.rs  mod.rs
src/image/: bmp.rs  mod.rs
src/uefi/: boot.rs  config.rs  externs.rs  guid.rs  mod.rs  panic.rs  system.rs  text.rs
targets/: x86_64-efi-pe.json
uefi/: Cargo.toml
uefi/src/: boot.rs  config.rs  fs.rs  graphics.rs  guid.rs  lib.rs  runtime.rs  shell.rs  status.rs  system.rs  text.rs  time.rs
