[package]
name = "system76_firmware_update"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-only"

[profile.release]
lto = true

[dependencies]
coreboot-fs = "0.1.1"
intel-spi = "0.1.5"
orbclient = { version = "0.3.42", default-features = false, features = ["unifont"] }
plain = "0.2.3"
redox_dmi = "0.1.5"
redox_hwio = { version = "0.1.6", default-features = false }
redox_intelflash = "0.1.3"
redox_uefi_std = "0.1.9"
system76_ecflash = { git = "https://github.com/system76/ecflash.git" }

[dependencies.system76_ectool]
git = "https://github.com/system76/ec.git"
default-features = false
features = ["redox_hwio"]
